--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.5",
     "uuid": "^9.0.0"
   }
 }
